Adding Ameya Darshan information to handbook

--- a/data/team_members/person/a/ameyadarshan.yml
+++ b/data/team_members/person/a/ameyadarshan.yml
@@ -3,7 +3,7 @@ locality:
 country: Remote
 role: <a href="">Security Engineer</a>
 reports_to: vitormeirelesdesousa
-picture: ../gitlab-logo-extra-whitespace.png
+picture: ameyadarshan.jpg
 pronouns:
 pronunciation:
 twitter:
