Add Package registry performance improvements

--- a/data/release_posts/unreleased/performance_improvements.yml
+++ b/data/release_posts/unreleased/performance_improvements.yml
@@ -11,4 +11,4 @@ tertiary:
       In GitLab 15.5, we're shipping performance improvements for issues, projects, milestones, and much more! Some improvements in GitLab 15.5 are:
 
       - [Convert stylesheets/pages/clusters.scss into page specific bundle](https://gitlab.com/gitlab-org/gitlab/-/issues/239803).
-      - [Description](https://gitlab.com/gitlab-org/gitlab/-/issues/12345).
+      - [Use the creation timestamp returned by the Container Registry API in cleanup policies](https://gitlab.com/groups/gitlab-org/-/epics/8379).
