--- a/data/release_posts/unreleased/manage-github-importer--scrape-images-to-gitlab-and-update-markdow.yml
+++ b/data/release_posts/unreleased/manage-github-importer--scrape-images-to-gitlab-and-update-markdow.yml
@@ -11,5 +11,5 @@ features:
     - Importers
     issue_url: 'https://gitlab.com/gitlab-org/gitlab/-/issues/18052'
     description: |
-      Upon importing projects from GitHub you can now import project's image resources and other attachments types - from release notes, comments and notes, issues and PR descriptions. They are added to GitLab's infrastructure and their links are updated to new GitLab URLs, so that they not longer link to GitHub CDN.
+      Upon importing projects from GitHub you can now import project's image resources and other attachments types from release notes and comments. They are added to GitLab's infrastructure and their links are updated to new GitLab URLs, so that they not longer link to GitHub CDN.
       As importing attachments might take a considerable amount of time, [you can choose in the UI](https://gitlab.com/gitlab-org/gitlab/-/issues/370734) if you want to import them or not. By default they are not imported.
