--- a/data/team_members/person/h/harsimarsandhu.yml
+++ b/data/team_members/person/h/harsimarsandhu.yml
@@ -20,7 +20,7 @@ departments:
 projects:
   gitlab: reviewer backend
 specialty:
-- 'Manage: Compliance'
+- 'Compliance'
 expertise:
 story: Harsimar is a software/technology enthusiast. He loves drawing portraits, working
   out and spending time with family and friends.
