--- a/data/team_members/person/w/wandering_person.yml
+++ b/data/team_members/person/w/wandering_person.yml
@@ -1,7 +1,7 @@
 name: Michael Becker
 locality: 
 country: Remote
-role: <a href="">Senior Backend Engineer</a>, Govern:Compliance
+role: <a href="/job-families/engineering/development/backend/">Senior Backend Engineer</a>, Govern:Compliance
 reports_to: nrosandich
 picture: ../gitlab-logo-extra-whitespace.png
 pronouns:
@@ -10,9 +10,12 @@ twitter:
 linkedin:
 gitlab: wandering_person
 departments:
-  - Development
+  - Engineering Function
+  - Development Department
+  - Dev Section
+  - Govern:Compliance BE Team
   - Govern:Compliance Fullstack Team
-specialty: "Compliance"
+specialty: 
+  - 'Compliance'
 expertise:
 story:
-
