--- a/data/release_posts/unreleased/manage-configurable-list-of-things-to-be-imported-that-can-be-adju.yml
+++ b/data/release_posts/unreleased/manage-configurable-list-of-things-to-be-imported-that-can-be-adju.yml
@@ -1,7 +1,7 @@
 ---
 features:
   secondary:
-  - name: "User can opt-in to import expensive relations from GitHub"
+  - name: "Import more relationships when importing projects from GitHub"
     available_in: [core, premium, ultimate]
     gitlab_com: true
     documentation_link: 'https://docs.gitlab.com/ee/#amazing'
@@ -12,4 +12,12 @@ features:
     - Importers
     issue_url: 'https://gitlab.com/gitlab-org/gitlab/-/issues/370734'
     description: |
-      Importing all supported relations during project import from GitHub may take a long time. Specifically recently implemented [image resources and other attachments types](https://gitlab.com/gitlab-org/gitlab/-/issues/18052), [issue events](https://gitlab.com/groups/gitlab-org/-/epics/7655) and [MR events](https://gitlab.com/groups/gitlab-org/-/epics/7673), as well as import of all [PR and issue comments](https://gitlab.com/gitlab-org/gitlab/-/merge_requests/67150) can take a significant amount of time for large projects. You might not want to import all of those relations to speed up the process. Now you can choose which relations, taking long to be imported, you want to include in the import. By default they are all excluded.
+      Importing all supported relationships during a project import from GitHub can take a long time and is disabled by default. Specifically the recently
+      implemented:
+
+      - [Image resources and other attachments types](https://gitlab.com/gitlab-org/gitlab/-/issues/18052).
+      - [Issue events](https://gitlab.com/groups/gitlab-org/-/epics/7655).
+      - [Pull request events](https://gitlab.com/groups/gitlab-org/-/epics/7673).
+      - [Pull request and issue comments](https://gitlab.com/gitlab-org/gitlab/-/merge_requests/67150).
+
+      Now you can include these additional relationships in an import if you require them, which slows down the import but includes more information.
