Add Cloud Seed press release to website

--- a/data/press_releases.yml
+++ b/data/press_releases.yml
@@ -582,3 +582,6 @@
   link: /press/releases/2022-10-05-teamops-new-practice-for-work-environments.html
   date: 2022-10-05
 
+- title: "GitLab Inc. Launches Cloud Seed in Collaboration with Google Cloud to Bolster Cloud Adoption"
+  link: /press/releases/2022-10-11-gitlab-inc-launches-cloud-seed.HTML
+  date: 2022-10-11
