Mark @cmaxim as stable counterpart of Gitaly team.

--- a/data/team_members/person/c/costel-maxim.yml
+++ b/data/team_members/person/c/costel-maxim.yml
@@ -3,7 +3,7 @@ name: Costel Maxim
 locality:
 country: Remote
 role: <a href="/job-families/engineering/application-security/#senior-application-security-engineer">Senior
-  Security Engineer, Application Security</a>, Plan (Project Management, Product Planning, Certify), Create:Source Code, Growth, Fulfillment
+  Security Engineer, Application Security</a>, Plan (Project Management, Product Planning, Certify), Create:Source Code, Growth, Fulfillment, Systems:Gitaly
 reports_to: vitormeirelesdesousa
 picture: CMaxim.png
 twitter:
