--- a/data/team_members/person/b/bwill.yml
+++ b/data/team_members/person/b/bwill.yml
@@ -42,7 +42,7 @@ projects:
   - reviewer backend
   - reviewer go
   - reviewer database local
-  - trainee_maintainer ci_template
+  - maintainer ci_template
   gitlab-pages: reviewer
   gitlab-runner: reviewer
   secure-container-scanning: maintainer backend
