--- a/data/team_members/person/l/lee-tickett.yml
+++ b/data/team_members/person/l/lee-tickett.yml
@@ -11,11 +11,17 @@ twitter: leetickett
 linkedin: leetickett
 gitlab: leetickett-gitlab
 departments:
-- Engineering Function
-- Quality Department
-- Contributor Success Team
-- Merge Request Coach
-- Core Team
+  - Engineering Function
+  - Quality Department
+  - Contributor Success Team
+  - Merge Request Coach
+  - Core Team
+projects:
+  gitlab:
+    - reviewer backend
+    - reviewer frontend
+  gitlab-triage: reviewer
+  triage-ops: reviewer
 story: Lee adopted GitLab (2017), started contributing (2019), joined the Core team (2020), then joined the Contributor Success team (2022).
   He enjoys working with both the frontend and backend and loves learning new tools, techniques and technologies. His vision is to help everyone realize GitLab's potential and that they too can contribute.
   When not working, you'll find him spending time with his family, or kicking back in his retro home bar.
