doc: Add Gerardo as stable counterpart to Gitaly team page.

--- a/data/team_members/person/g/gerardogutierrez.yml
+++ b/data/team_members/person/g/gerardogutierrez.yml
@@ -2,7 +2,7 @@
 name: Gerardo Gutierrez
 locality:
 country: Remote
-role: <a href="">Senior Support Engineer</a>
+role: <a href="">Senior Support Engineer</a>, Systems:Gitaly
 reports_to: ronnie-alfaro
 picture: gerardogutierrez.jpg
 pronunciation: gerardo, gerry, jerry
