--- a/data/team_members/person/a/adie.po.yml
+++ b/data/team_members/person/a/adie.po.yml
@@ -1,16 +1,20 @@
-name: Backend Engineer 
+name: Adie Po
 locality: 
 country: Remote
-role: <a href="">Backend Engineer</a>
+role: <a href="/job-families/engineering/development/backend/intermediate/">Backend Engineer, Package</a>
 reports_to: michelletorres
 picture: ../gitlab-logo-extra-whitespace.png
-pronouns:
-pronunciation:
+pronouns: she/her
+pronunciation: ah-dee
 twitter:
 linkedin:
 gitlab: adie.po
 departments:
-  - Development
+  - Engineering Function
+  - Development Department
+  - Ops Sub-department
+  - Package Group
+  - Package BE Team
 specialty: ""
 expertise:
 story:
