Split Dynamic Analysis into two teams

--- a/data/team_members/person/h/herbermadrigal.yml
+++ b/data/team_members/person/h/herbermadrigal.yml
@@ -4,7 +4,7 @@ locality:
 country: Remote
 role: <a href="/job-families/engineering/backend-engineer/">Senior Backend Engineer,
   Secure:Dynamic Analysis</a>
-reports_to: sethberger
+reports_to: backend-engineering-manager-sec-dynamic-analysis
 picture: herbmadrigal.png
 pronouns: he/him
 pronunciation:
