--- a/data/team_members/person/d/davidnelsongl.yml
+++ b/data/team_members/person/d/davidnelsongl.yml
@@ -4,7 +4,7 @@ locality:
 country: Remote
 role: <a href="/job-families/engineering/development/backend/">Senior Backend Engineer,
   Secure:Dynamic Analysis</a>
-reports_to: sethberger
+reports_to: backend-engineering-manager-sec-dynamic-analysis
 picture: david-nelson.jpg
 pronouns: he/him
 pronunciation:
