--- a/data/team_members/person/m/mikeeddington.yml
+++ b/data/team_members/person/m/mikeeddington.yml
@@ -4,7 +4,7 @@ locality:
 country: Remote
 role: <a href="/job-families/engineering/development/backend/">Staff Backend Engineer,
   Secure:Dynamic Analysis</a>
-reports_to: sethberger
+reports_to: backend-engineering-manager-sec-dynamic-analysis
 picture: michaeleddington.jpg
 twitter:
 gitlab: mikeeddington
