--- a/.gitlab/CODEOWNERS
+++ b/.gitlab/CODEOWNERS
@@ -565,10 +565,13 @@ sites/handbook/source/handbook/marketing/corporate-marketing/corporate-communica
 /source/direction/gitaly/ @joshlambert @mjwood
 
 ^[Product - Fulfillment Section]
-/source/direction/fulfillment/ @ofernandez2 @tgolubeva @doniquesmit @courtmeddaugh @alex_martin
-/source/direction/fulfillment/utilization/ @ofernandez2 @doniquesmit
-/source/direction/fulfillment/purchase/ @ofernandez2 @alex_martin
-/source/direction/fulfillment/provision/ @ofernandez2 @courtmeddaugh
+/source/direction/fulfillment/ @ofernandez2
+/source/direction/fulfillment/utilization/ @doniquesmit
+/source/direction/fulfillment/purchase/ @alex_martin
+/source/direction/fulfillment/provision/ @courtmeddaugh
+/source/direction/fulfillment/commerce-integrations/ @isandin
+/source/direction/fulfillment/fulfillment-admin-tools/ @doniquesmit
+/source/direction/fulfillment/platform/ @jameslopez @tgolubeva
 
 ^[Product Section - ModelOps]
 /source/direction/data-science/
