Remove unnecessary word

--- a/data/release_posts/unreleased/manage-github-importer--migrate-mr-events.yml
+++ b/data/release_posts/unreleased/manage-github-importer--migrate-mr-events.yml
@@ -12,7 +12,7 @@ features:
     epic_url: 'https://gitlab.com/groups/gitlab-org/-/epics/7673'
     description: |
       We continue to improve the GitHub project importer by adding more metadata to the migrated projects. With added [pull request events history](https://gitlab.com/groups/gitlab-org/-/epics/7673) the following pull request events can be imported from GitHub and
-      become part of an imported merge request's metadata:
+      become part of a merge request's metadata:
 
       - Closed or reopened.
       - Labeled or unlabeled.
