Add Stanislav Dobrovolschii as a backend reviewer for gitlab project

--- a/data/team_members/person/s/stanislav-dobrovolschii.yml
+++ b/data/team_members/person/s/stanislav-dobrovolschii.yml
@@ -8,6 +8,8 @@ role: <a href="/job-families/engineering/development/backend/">Backend Engineer<
 reports_to: kushal-p
 picture: sdobrovolschii.jpg
 gitlab: sdobrovolschii
+projects:
+  gitlab: reviewer backend
 departments:
 - Engineering Function
 - Development Department
