--- a/data/release_posts/unreleased/manage-allow-group-owners-to-update-group-members-saml-and-scim-ex.yml
+++ b/data/release_posts/unreleased/manage-allow-group-owners-to-update-group-members-saml-and-scim-ex.yml
@@ -7,7 +7,7 @@ features:
     documentation_link: 'https://docs.gitlab.com/ee/api/saml.md'
     reporter: hsutor
     stage: manage
-    categories: User Management
+    categories: "User Management"
     issue_url: 'https://gitlab.com/gitlab-org/gitlab/-/issues/227841'
     description: |
       Previously, if there were changes to group members' SAML or SCIM identifier (also known as the NameID), the only way to update it was by having users unlink and manually re-link their GitLab and SSO accounts. Now, group owners can update the `extern_uid` field in GitLab for both SAML and SCIM identities to match the SSO identifier using a new endpoint in the groups API.
