--- a/data/team_members/person/a/andrasherczeg.yml
+++ b/data/team_members/person/a/andrasherczeg.yml
@@ -14,7 +14,7 @@ gitlab: andrasherczeg
 departments:
 - Engineering Function
 - Development Department
-- ModelOps Section
+- Data Science Section
 - ModelOps:Applied ML
 expertise:
 story: Andras is interested in devops and machine learning. He loves challenging problems
