--- a/data/team_members/person/b/bcardoso-.yml
+++ b/data/team_members/person/b/bcardoso-.yml
@@ -14,7 +14,7 @@ gitlab: bcardoso-
 departments:
 - Engineering Function
 - Development Department
-- ModelOps Section
+- Data Science Section
 - ModelOps:Applied ML
 expertise:
 story: Brazilian Software Engineer with a keen interest in algorithms and machine
