--- a/data/team_members/person/j/jensen-stava.yml
+++ b/data/team_members/person/j/jensen-stava.yml
@@ -12,6 +12,7 @@ pronouns: he/him
 departments:
 - Product Management
 - Data Science Section
+- Data Science PM Team
 story: 'I am a Senior Product Manager for GitLab. On my personal time, I love road
   biking, running, and swimming. I mostly code in Nodejs and React, and I love exploring
   new ways of storing manipulating and visualizing data.
