--- a/data/team_members/person/s/srayner.yml
+++ b/data/team_members/person/s/srayner.yml
@@ -14,7 +14,7 @@ gitlab: srayner
 departments:
 - Engineering function
 - Development Department
-- ModelOps Section
+- Data Science Section
 - ModelOps:Applied ML
 specialty: 'ModelOps: Applied ML'
 expertise:
