--- a/data/team_members/person/h/hbenson.yml
+++ b/data/team_members/person/h/hbenson.yml
@@ -3,7 +3,7 @@ name: Hillary Benson
 locality:
 country: Remote
 role: <a href="/job-families/product/product-management-leadership/#director-of-product-management">Director
-  of Product Management, Sec & ModelOps</a>
+  of Product Management, Sec & Data Science</a>
 reports_to: ddesanto
 picture: hillarybenson.jpg
 pronouns: she/her
@@ -16,8 +16,8 @@ departments:
 - Sec PM Team
 - Secure PM Team
 - Govern PM Team
-- ModelOps Section
-- ModelOps PM Team
+- Data Science Section
+- Data Science PM Team
 specialty: Secure & Protect
 story: Hillary is a product and security leader with a passion for solving meaningful
   problems in elegant ways. She lives in Los Gatos, CA with her husband and two Welsh
@@ -27,4 +27,3 @@ story: Hillary is a product and security leader with a passion for solving meani
   Studies from the Georgetown University Walsh School of Foreign Service and an S.B
   in Management Science from MIT. In her free time, you'll usually find Hillary reading
   books, watching movies, or exploring the great outdoors.
-
