--- a/data/team_members/person/h/hongtaoyang.yml
+++ b/data/team_members/person/h/hongtaoyang.yml
@@ -14,7 +14,7 @@ gitlab: hongtaoyang
 departments:
 - Engineering function
 - Development Department
-- ModelOps Section
+- Data Science Section
 - ModelOps:Applied ML
 specialty: 'ModelOps: Applied ML'
 expertise:
