--- a/data/team_members/person/n/nkhalwadekar.yml
+++ b/data/team_members/person/n/nkhalwadekar.yml
@@ -1,7 +1,8 @@
 name: Neha Khalwadekar
 locality: 
 country: Remote
-role: <a href="">Product Manager</a>
+role: <a href="/job-families/product/product-manager/">Product Manager</a>,
+  Applied ML
 reports_to: taylormccaslin
 picture: ../gitlab-logo-extra-whitespace.png
 pronouns:
@@ -11,7 +12,8 @@ linkedin:
 gitlab: nkhalwadekar
 departments:
   - Product Management
+  - Data Science Section
+  - Data Science PM Team
 specialty: "ModelOps: Applied ML"
 expertise:
 story:
-
