--- a/data/team_members/person/t/taylormccaslin.yml
+++ b/data/team_members/person/t/taylormccaslin.yml
@@ -2,7 +2,7 @@
 name: Taylor McCaslin
 locality:
 country: Remote
-role: <a href="/job-families/product/product-management-leadership/#group-manager-product-gmp">Group Manager, Product</a>, ModelOps
+role: <a href="/job-families/product/product-management-leadership/#group-manager-product-gmp">Group Manager, Product</a>, Data Science
 reports_to: hbenson
 picture: taylormccaslin.png
 twitter: digital_saas
@@ -11,8 +11,8 @@ linkedin: taylormccaslin
 pronouns: he/him
 departments:
 - Product Management
-- ModelOps Section
-- ModelOps PM Team
+- Data Science Section
+- Data Science PM Team
 story: 'Taylor McCaslin is a multi-disciplinary Investor, Product Manager, and LGBTQ+
   Mentor living in Big Sky, Montana. He brings his passion for creating delightful
   developer experiences and usable security tools to Gitlab. Taylor also founded and
@@ -23,4 +23,3 @@ story: 'Taylor McCaslin is a multi-disciplinary Investor, Product Manager, and L
   and inclusion. <a href="https://www.taylormccaslin.com/" target="_blank">Learn more
   about Taylor</a>.'
 specialty: ModelOps
-
