Fix link from md to html

--- a/data/release_posts/unreleased/manage-allow-group-owners-to-update-group-members-saml-and-scim-ex.yml
+++ b/data/release_posts/unreleased/manage-allow-group-owners-to-update-group-members-saml-and-scim-ex.yml
@@ -4,7 +4,7 @@ features:
   - name: "Update group members' SAML and SCIM extern_uid with API"
     available_in: [silver, gold]
     gitlab_com: true
-    documentation_link: 'https://docs.gitlab.com/ee/api/saml.md'
+    documentation_link: 'https://docs.gitlab.com/ee/api/saml.html'
     reporter: hsutor
     stage: manage
     categories:
