--- a/data/release_posts/unreleased/configure-support-environment-deployment-tiers-in-gitlab-agent.yml
+++ b/data/release_posts/unreleased/configure-support-environment-deployment-tiers-in-gitlab-agent.yml
@@ -12,6 +12,9 @@ features:
     - Deployment Management
     issue_url: 'https://gitlab.com/gitlab-org/gitlab/-/issues/357934'
     description: |
-      The agent for Kubernetes allows both pull- and push-based deployment support. Push-based support is provided through its GitLab CI/CD integration, called the CI/CD workflow. The integration allows [restricting the potential of CI jobs using Kubernetes RBAC](https://docs.gitlab.com/ee/user/clusters/agent/ci_cd_workflow.html#impersonate-the-cicd-job-that-accesses-the-cluster).
+      Kubernetes administrators can now restrict CI/CD access to specific
+      [environment tiers](https://docs.gitlab.com/ee/ci/environments/#deployment-tier-of-environments)
+      using the agent for Kubernetes.
 
-      Until now, users could not restrict CI access to specific [environment tiers](https://docs.gitlab.com/ee/ci/environments/#deployment-tier-of-environments), increasing the security risks of the integration. The current release expands the `groups` the impersonated CI job account belongs to with environment-tier specific information. Kubernetes admins can target these groups with RBAC for improved control of CI access to clusters.
+      In past releases, administrators could not restrict access to specific tiers, which added potential security
+      risks to Kubernetes integrations.
