--- a/data/release_posts/unreleased/manage-github-importer--migrate-mr-events.yml
+++ b/data/release_posts/unreleased/manage-github-importer--migrate-mr-events.yml
@@ -30,5 +30,6 @@ features:
       - Assigned or unassigned.
       - Renamed.
 
-      Because importing pull request and issue events can take a long time, they aren't imported by default. To import them, select **Import issue and pull request events** in **Advanced import settings** dropdown on GitHub import page, when importing with the GitLab UI.
+      Because importing pull request and issue events can take a long time, they aren't imported by default. To import them, go to the GitHub import page,
+      and select **Import issue and pull request events** under **Advanced import settings** when importing using the GitLab UI.
 
