--- a/data/team_members/person/h/hmehra.yml
+++ b/data/team_members/person/h/hmehra.yml
@@ -13,6 +13,7 @@ projects:
   gitlab:
   - reviewer backend
   - reviewer frontend
+  pipeline-validation-service: maintainer
 departments:
 - Engineering Function
 - Development Department
